* Fixed error causing failure to submit a repeating registration
  when mysql is in strict mode.

* Preserve the contents of the registration form when changing the date.

* Added occupancy map on the administrative approval page.

* Added configuration settings DEFAULT_PRIVACY (default false) and
  USER_SETTABLE_PRIVACY (default false).  If USER_SETTABLE_PRIVACY
  is set to true, a column needs to be added to the
  database.  Example mysql command:
  alter table building_access add column PRIVACY char(1) not null default '';

* Make it clear that the app title can changed by setting
  WEB_APP_TITLE in config.php.

* Allow the About page to be disabled by configuring ABOUT_PAGE =
  null.

* Allow occupants to be anonymized based on manifest group membership.
  See BUILDING_VISIBILITY_MANIFEST_GROUP in config_example.php.